Update filter stlying * Fix vertical align

--- a/app/assets/stylesheets/parks/filters/buttons.scss
+++ b/app/assets/stylesheets/parks/filters/buttons.scss
@@ -3,6 +3,10 @@ $button-border-radius: 10px;
 .filter-row {
   margin: 10px 0;
   height: 50px;
+
+  &:not(:first-child) {
+    line-height: 50px;
+  }
 }
 .btn-container {
   width: 100%;
